# hospital-queue

./: .env.example  .gitignore  README.md  package.json
backend/: .env  pyproject.toml
backend/app/: __init__.py  config.py  llm_service.py  main.py  models.py  queue_service.py  ws_manager.py
frontend/: package.json  pnpm-lock.yaml
frontend/apps/display/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/display/src/: App.vue  style.css
frontend/apps/doctor/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/doctor/src/: App.vue  style.css  vite-env.d.ts
frontend/apps/patient/: index.html  package.json  vite.config.ts
frontend/apps/patient/src/: App.vue  style.css
scripts/: start.sh  stop.sh
